@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-17T01:12:53Z",
-  "count_outdated" : 338,
-  "uniques_outdated" : 191,
+  "timestamp" : "2022-06-17T16:22:04Z",
+  "count_outdated" : 339,
+  "uniques_outdated" : 192,
   "count" : 365,
   "uniques" : 209,
   "clones" : [
-    {
-      "timestamp": "2022-06-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-04T00:00:00Z",
       "count": 3,
